# Legajos

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.mjs  vite.config.ts
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx  router.ts
src/app/layout/: AppShell.tsx  SidebarRail.tsx  TopCommandBar.tsx
src/features/auth/: AuthScreen.tsx  SecurityDialog.tsx
src/features/dashboard/: DashboardPage.tsx
src/features/legajos/: LegajoDetailPanel.tsx  LegajoFormDialog.tsx  LegajosPage.tsx
src/features/operaciones/: OperationsPage.tsx
src/shared/api/: auth.ts  bridge.ts  legajo.ts
src/shared/lib/: legajo.ts
src/shared/types/: auth.ts  legajo.ts
src/shared/ui/: ActionButton.tsx  AttachmentCard.tsx  BirthdayNotice.tsx  DataGrid.tsx  EmptyState.tsx  FilterBar.tsx  IdentityCell.tsx  MetricCard.tsx  SectionCard.tsx  SegmentedPills.tsx  StatusPill.tsx  ToastRegion.tsx
