[package]
name = "legajo_rh"
version = "0.1.0"
description = "Sistema local de legajos para Recursos Humanos"
authors = ["Codex"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "legajo_rh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
anyhow = "1.0.102"
calamine = "0.30.1"
chrono = "0.4.44"
argon2 = "0.5.3"
open = "5.3.5"
printpdf = "0.9.1"
rfd = "0.17.2"
rusqlite = { version = "0.40.0", features = ["bundled"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
rust_xlsxwriter = "0.92.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.2", features = [] }
